Minimal branch: just the burst guard
Strips everything that is not the fix. Removes ProbeState (stack sampler,
stub-key histograms, root symbol tables, PSI location resolution, stall log),
ProbePatch's negative lookup cache, ProbeInstaller's reflective accessors and
weave reporting, and the whole tool window (ProbePanel,
ProbeToolWindowFactory).

What remains is four classes:

  BurstGuard      per-thread, per-key lookup counter; cuts a runaway burst
  StubKeyAdvice   inlined into RubyStringStubIndexExtension.getElements
  Installer       self-attach, append boot jar, weave
  Bootstrap       AppLifecycleListener, so the weave lands before analysis

Entry point moves from ToolWindowFactory.isApplicable to
AppLifecycleListener, which has no UI and fires before any project opens --
so the target is woven as it loads rather than needing a retransform.

The negative lookup cache goes too. It addresses a different failure (an
anonymous FQN that resolves to nothing); it provably cannot arm on the
non-empty runaway that causes this hang.

Plugin jar drops from 40,258 to 11,449 bytes. Three behavioural tests, no
reflection into the guard: what reaches the index, and what comes back.